--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
@@ -1,34 +1,34 @@
 @font-face {
-    font-family: 'Uni Sans';
-    src: url('../fonts/UniSansThinItalicCAPS.html') format('woff2'),
-        url('../fonts/UniSansThinItalicCAPS.woff') format('woff');
+    font-family: 'Futura';
+    src: url('../fonts/Futura-Heavy-font.woff2') format('woff2'),
+        url('../fonts/Futura-Heavy-font.woff') format('woff');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Uni Sans';
-    src: url('../fonts/UniSansHeavyCAPS.html') format('woff2'),
-        url('../fonts/UniSansHeavyCAPS.woff') format('woff');
+       font-family: 'Futura';
+    src: url('../fonts/Futura-Heavy-font.woff2') format('woff2'),
+        url('../fonts/Futura-Heavy-font.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Uni Sans';
-    src: url('../fonts/UniSansThinCAPS.html') format('woff2'),
-        url('../fonts/UniSansThinCAPS.woff') format('woff');
+        font-family: 'Futura';
+    src: url('../fonts/Futura-Heavy-font.woff2') format('woff2'),
+        url('../fonts/Futura-Heavy-font.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Uni Sans';
-    src: url('../fonts/UniSansHeavyItalicCAPS.html') format('woff2'),
-        url('../fonts/UniSansHeavyItalicCAPS.woff') format('woff');
+      font-family: 'Futura';
+    src: url('../fonts/Futura-Heavy-font.woff2') format('woff2'),
+        url('../fonts/Futura-Heavy-font.woff') format('woff');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
