--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
@@ -269,7 +269,7 @@ p.p-subtitle {
 }
 
 .main-title {
-  font-family: 'Uni Sans';
+  font-family: 'Futura';
   font-weight: 900;
   font-size: 66px;
   line-height: 0.8em;
