--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
@@ -214,10 +214,10 @@ p.p-subtitle {
   left: 0;
   height: 100%;
   width: 100%;
-  background: -moz-linear-gradient(left, rgba(27,172,181,1) 0%, rgba(27,172,181,1) 33%, rgba(27,172,181,0) 66%, rgba(27,172,181,0) 100%);
-  background: -webkit-linear-gradient(left, rgba(27,172,181,1) 0%, rgba(27,172,181,1) 33%, rgba(27,172,181,0) 66%, rgba(27,172,181,0) 100%);
-  background: linear-gradient(to right, rgba(27,172,181,1) 0%,rgba(27,172,181,1) 33%,rgba(27,172,181,0) 66%,rgba(27,172,181,0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bacb5', endColorstr='#001bacb5',GradientType=1 );
+  background: -moz-linear-gradient(left, rgba(103,184,109,1) 0%, rgba(103,184,109,1) 33%, rgba(103,184,109,0) 66%, rgba(103,184,109,0) 100%);
+  background: -webkit-linear-gradient(left, rgba(103,184,109,1) 0%, rgba(103,184,109,1) 33%, rgba(103,184,109,0) 66%, rgba(103,184,109,0) 100%);
+  background: linear-gradient(to right, rgba(103,184,109,1) 0%,rgba(103,184,109,1) 33%,rgba(103,184,109,0) 66%,rgba(103,184,109,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#67b86d', endColorstr='#0067b86d',GradientType=1 );
 }
 
 .cover-intro .frame .f-back .f-overlaydos {
