--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/css/style.css
@@ -187,10 +187,12 @@ p.p-subtitle {
 .fs-gallery .frame[data-frame='1'] {
   opacity: 1;
 }
-.cover-intro .frame .f-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+.cover-intro .frame .f-back img {
+    height: 100%;
+    margin-top: 0px;
+    width: 72%;
+    object-fit: cover;
+    margin-left: 29%;
 }
 .cover-intro .frame .f-back video {
   height: 100%;
